主页视图修改/layout修改

--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Home/Index.cshtml
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "主页";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">欢迎光临</h1>
+    <p>教程 <a href="https://docs.microsoft.com/aspnet/core">Demo</a>.</p>
 </div>
  
