--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Home/Privacy.cshtml
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "内容页";
 }
-<h1>@ViewData["Title"]</h1>
+<h1>电影列表</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>在这里选择电影.</p>
