添加电影基架，添加模型数据，调用，删除数据的方法/通过依赖注入将数据模型注入到控制器中

--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/HelloWorld/Index.cshtml
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/HelloWorld/Index.cshtml
@@ -1,9 +1,8 @@
-﻿CSHTML
-
+﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "电影列表";
 }
 
-<h2>Index</h2>
+<h2>我的电影</h2>
 
 <p>Hello from our View Template!</p>
