添加LInq语句/笔记

--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Movies/Index.cshtml
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Movies/Index.cshtml
@@ -7,8 +7,14 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">加入新电影</a>
 </p>
+<form asp-controller="Movies" asp-action="Index">
+    <p>
+        Title:<input type="Text" name="ScearchString"/>
+        <input type="submit" value="Filter"/>
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
@@ -43,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">编辑</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">详情</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">删除</a>
             </td>
         </tr>
 }
