更改Index重载方法

--- a/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Movies/Index.cshtml
+++ b/ASP.NET Core Web Demo/ASP.NET Core Web Demo/Views/Movies/Index.cshtml
@@ -11,7 +11,7 @@
 </p>
 <form asp-controller="Movies" asp-action="Index">
     <p>
-        Title:<input type="Text" name="ScearchString"/>
+        Title:<input type="text" name="ScearchString"/>
         <input type="submit" value="Filter"/>
     </p>
 </form>
